...
                        app:counterMaxLength="25"
                        app:errorEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_name_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:hint="First Name"
                            android:textSize="14sp"></com.google.android.material.textfield.TextInputEditText>
...
                        app:counterMaxLength="25"
                        app:errorEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_name_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:hint="Last Name"
                            android:textSize="14sp"></com.google.android.material.textfield.TextInputEditText>
...
                        app:counterMaxLength="@integer/emailMaxLength"
                        app:errorEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:hint="Email"
                            android:textSize="14sp"></com.google.android.material.textfield.TextInputEditText>
...
                        app:counterEnabled="false"
                        app:counterMaxLength="@integer/passwordMaxlength"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:hint="Password"
                            android:inputType="textPassword"
...

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerRGBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="Register"
                app:backgroundTint="@color/color6">

            </com.google.android.material.button.MaterialButton>

            <Button
                android:id="@+id/loginRGBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="10dp"
...
